infer/tests/codetoanalyze/objc/errors/memory_leaks_benchmark/RetainReleaseExample.dot
digraph iCFG {
5 [label="5:  DeclStmt \n   n$5=_fun___objc_alloc_no_fail(sizeof(class A ):class A *) [line 17]\n  n$3=_fun_A_init(n$5:class A *) virtual [line 17]\n  *&a:class A *=n$3 [line 17]\n  REMOVE_TEMPS(n$3,n$5); [line 17]\n " shape="box"]
	

	 5 -> 4 ;
4 [label="4:  Message Call: retain \n   n$2=*&a:class A * [line 18]\n  n$1=_fun___objc_retain(n$2:class A *) [line 18]\n  REMOVE_TEMPS(n$1,n$2); [line 18]\n " shape="box"]
	

	 4 -> 3 ;
3 [label="3:  Message Call: release \n   n$0=*&a:class A * [line 19]\n  _fun___objc_release(n$0:class A *) [line 19]\n  REMOVE_TEMPS(n$0); [line 19]\n  NULLIFY(&a,false); [line 19]\n  APPLY_ABSTRACTION; [line 19]\n " shape="box"]
	

	 3 -> 2 ;
2 [label="2: Exit test \n  " color=yellow style=filled]
	

1 [label="1: Start test\nFormals: \nLocals:  a:class A * \n   DECLARE_LOCALS(&return,&a); [line 16]\n  NULLIFY(&a,false); [line 16]\n " color=yellow style=filled]
	

	 1 -> 5 ;
}
